--- a/employeepayrolldesign.css
+++ b/employeepayrolldesign.css
@@ -12,7 +12,7 @@ header {
     
 }
 
-img {
+.profile-image {
     height: 25px;
     width: 25px;
     border-radius: 50%;
@@ -50,10 +50,6 @@ input[type=text] {
     border: 1px solid gray;
 }
 
-/* button {
-    width: 25%;
-    height: 25px;
-} */
 
 .gender {
     width: max-content;
@@ -97,7 +93,7 @@ textarea {
 
 button {
     width: 50%;
-    height: 2em;
+    height: 3em;
 }
 
 button[type="reset"] {
